--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -14,10 +14,10 @@
     #searchbar {width:40%;position:absolute;left:10px;opacity:0.9;padding-left:2px;}
     #searchbar .vissearch {width:100%;margin-bottom:0px !important;box-shadow:0 0 15px rgba(0,0,0,0.2);border: solid rgba(0,0,0,0.2) 1px;border-radius:0px;}
     #searchbar form {position:relative; right:10px; margin-bottom: 1px;height:32px;}
-    #left {float:left;width:25%;position:absolute;top:35px;left:2px;height:auto;max-height: -webkit-calc(100% - 35px); max-height: -moz-calc(100% - 35px); max-height: -ms-calc(100% - 35px); max-height: -o-calc(100% - 35px); max-height: calc(100% - 35px);}
-    #searchresults {float:left;height:auto;width:100%;background-color:#FFF;opacity:0.9;box-shadow:0 0 15px rgba(0,0,0,0.2);border: solid rgba(0,0,0,0.2) 1px;z-index:1;max-height: -webkit-calc(100% - 80px); max-height: -moz-calc(100% - 80px); max-height: -ms-calc(100% - 80px); max-height: -o-calc(100% - 80px);  max-height: calc(100% - 80px);overflow:scroll;}
+    #left {float:left;width:25%;position:absolute;top:36px;left:2px;height:auto;max-height: -webkit-calc(100% - 116px); max-height: -moz-calc(100% - 116px); max-height: -ms-calc(100% - 116px); max-height: -o-calc(100% - 116px); max-height: calc(100% - 116px);overflow-y:scroll;}
+    #searchresults {float:left;height:auto;width:100%;background-color:#FFF;opacity:0.9;z-index:1;}
     #filtercontrol ol, #filtercontrol ul {margin:0 0 10px 10px;}
-    #filtercontrol {float:right;position:absolute;right:2px;top:3px;box-shadow:0 0 15px rgba(0,0,0,0.2);border: solid rgba(0,0,0,0.2) 1px;height:auto;width:25%;padding:1px;background-color:#FFF;opacity:0.9;overflow-y:scroll;max-height: -webkit-calc(100% - 30px); max-height: -moz-calc(100% - 175px); max-height: -ms-calc(100% - 175px); max-height: -o-calc(100% - 175px);  max-height: calc(100% - 175px);}
+    #filtercontrol {float:right;position:absolute;right:2px;top:3px;box-shadow:0 0 15px rgba(0,0,0,0.2);border: solid rgba(0,0,0,0.2) 1px;height:auto;width:25%;padding:1px;background-color:#FFF;opacity:0.9;overflow-y:scroll;max-height: -webkit-calc(100% - 175px); max-height: -moz-calc(100% - 175px); max-height: -ms-calc(100% - 175px); max-height: -o-calc(100% - 175px);  max-height: calc(100% - 175px);}
     h4 {margin-left:5px;float:left;}
     #searchresults #results, #resultcount, #resultRight{margin:0 10px 0 10px;}
     form.leaflet-control-layers-list{margin:0px !important;}
@@ -41,7 +41,7 @@
     #page{text-align:center;margin-left:auto;margin-right:auto;}
     .btn{opacity:0.9;box-shadow:0 0 15px rgba(0,0,0,0.2);border: solid rgba(0,0,0,0.2) 1px;border-radius:0px;position:relative;top:-32px;left:100%;width:25% !important;}
     .project{cursor:pointer;}
-    hr{margin:5px !important;}
+    hr{margin:6px !important;}
     #resultsBtn, #filterBtn{text-align:center;cursor:pointer;background-image:url(/assets/humanity_united/icons-000000.png);background-position:0 -52px;background-repeat:no-repeat;width:26px;height:26px;float:right;}
     .plus{background-position:0px 0px !important;}
     .leaflet-control-layers-expanded{padding:5px !important;max-width:100%;max-height:100%;overflow:hidden;}
